vendor/fixed-macro/tests/compile-fail/types-overflow-01.rs
fn main() {
    fixed_macro::types::I4F4!(7.99);
}
